--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -4,4 +4,44 @@
 
 <web-app>
   <display-name>Archetype Created Web Application</display-name>
+  <servlet>
+  	<servlet-name>LogInServlet</servlet-name>
+  	<display-name>LogInServlet</display-name>
+  	<description></description>
+  	<servlet-class>SNServlet.LogInServlet</servlet-class>
+  </servlet>
+  <servlet>
+  	<servlet-name>RegistrationServlet</servlet-name>
+  	<display-name>RegistrationServlet</display-name>
+  	<description></description>
+  	<servlet-class>SNServlet.RegistrationServlet</servlet-class>
+  </servlet>
+  <servlet>
+  	<servlet-name>AddPostServlet</servlet-name>
+  	<display-name>AddPostServlet</display-name>
+  	<description></description>
+  	<servlet-class>SNServlet.AddPostServlet</servlet-class>
+  </servlet>
+  <servlet>
+  	<servlet-name>ShowPostsServlet</servlet-name>
+  	<display-name>ShowPostsServlet</display-name>
+  	<description></description>
+  	<servlet-class>SNServlet.ShowPostsServlet</servlet-class>
+  </servlet>
+  <servlet-mapping>
+  	<servlet-name>LogInServlet</servlet-name>
+  	<url-pattern>/LogInServlet</url-pattern>
+  </servlet-mapping>
+  <servlet-mapping>
+  	<servlet-name>RegistrationServlet</servlet-name>
+  	<url-pattern>/RegistrationServlet</url-pattern>
+  </servlet-mapping>
+  <servlet-mapping>
+  	<servlet-name>AddPostServlet</servlet-name>
+  	<url-pattern>/AddPostServlet</url-pattern>
+  </servlet-mapping>
+  <servlet-mapping>
+  	<servlet-name>ShowPostsServlet</servlet-name>
+  	<url-pattern>/ShowPostsServlet</url-pattern>
+  </servlet-mapping>
 </web-app>
